Remove legacy `GameDataConversion` and `DataPaths` classes; migrate refresh token handling to JPA entities and repositories; add schema migration, unit tests, and local Postgres setup.